# QtNewGUI

./: CMakeLists.txt  CTestTestfile.cmake  Makefile  README.md  cmake_install.cmake  main.cpp  style.qss
QtNewGUI_autogen/: moc_predefs.h
QtNewGUI_autogen/EWIEGA46WW/: qrc_resources.cpp
display/: GraphicsViewOpenGL.cpp
geometry/: GeometryOperationsManager.cpp
gui/: MainWindow.cpp  ObjectBrowser.cpp  Toolbox.cpp  ToolboxIcon.cpp
utils/: Utils.cpp
